distribution/securra-dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securra
  labels:
    app: securra
  namespace: securra-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: securra
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: securra
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      restartPolicy: Always
      containers:
        - name: securra
          securityContext: {}
          image: "113151489485.dkr.ecr.us-west-2.amazonaws.com/ai.beyond.securra-poc/securra-fe:0.0.5"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources: 
            requests:
              memory: "500Mi"
              cpu: "1000m"
            limits:
              memory: "1.25Gi"
              cpu: "1900m"
      nodeSelector:
        node-class: "front-end"
      tolerations:
      - key: "only-frontend"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
