distribution/securra-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securra
  namespace: securra-dashboard
spec:
  selector:
    app: securra
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
