distribution/securra-dashboard/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: securra
  namespace: securra-dashboard
spec:
  gateways:
  - securra-gateway
  hosts:
  - dashboard.securra.beyond.ai
  http:
  - name: "backend-route"
    match:
    - uri: 
        prefix: "/backend/"
    - uri:
        prefix: "/backend"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: securra-backend-api.securra-backend.svc.cluster.local
        port:
          number: 5000
    corsPolicy:
      allowOrigins:
      - exact: http://localhost:3000
      allowMethods:
      - POST
      - GET
      allowCredentials: true
      allowHeaders:
      - Content-Type
      maxAge: "24h"
  - name: "default-route"
    route:
    - destination:
        host: securra.securra-dashboard.svc.cluster.local
        port:
          number: 80
